language/move-lang/tests/move_check/expansion/standalone_name_with_type_args.move
module M {
    fun foo() {
        let _ = n<u64>;
    }
}
